Fixed home page buttons, improved spacing, improved forgot password form

--- a/server/public/layouts/core.less
+++ b/server/public/layouts/core.less
@@ -162,8 +162,6 @@ header {
   .form-create-account,
   .form-user-login {
     // Need extend of col-*-6
-    padding-left: 15px;
-    padding-right: 15px;
     width: 50%;
 
     @media (max-width: @screen-phone) {
@@ -184,9 +182,9 @@ header {
 }
 
 .tab-buttons {
-  &:extend(.row);
+  .clearfix;
 
-  padding-top: 1%;
+  padding-top: 10px;
 
   .btn-create-account,
   .btn-user-login {
@@ -210,7 +208,7 @@ header {
 #login {
   &:extend(.col-xs-12, .col-md-12, .col-lg-12);
 
-  padding-top: 2%;
+  padding-top: 20px;
 
   .checkbox,
   .forgot-password {
@@ -238,6 +236,11 @@ header {
     }
   }
 }
+
+#forgot {
+  .clearfix;
+}
+
 // ******
 
 // For Static Pages
